--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,19 @@
 	<groupId>CodingExerciseWW</groupId>
 	<artifactId>CodingExerciseWW</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    <packaging>jar</packaging>
 
 	<name>CodingExerciseWW</name>
 	<url>http://maven.apache.org</url>
